# mlops_hse_2024

./: .gitignore  Dockerfile  Dockerfile-mlflow  README.md  RandomForest_1.joblib  RandomForest_2.joblib  client_grpc.py  dashboard.py  dataset.csv  dataset.csv.dvc  docker-compose-mlflow.yml  docker-compose.yml  pyproject.toml
.dvc/: config
mlops_service/: client_grpc.py  main.py
mlops_service/grpc/: server.py  service.proto  service_pb2.py  service_pb2_grpc.py
mlops_service/utils/: logger.py  s3_client.py
models/: RandomForest_1.joblib  RandomForest_2.joblib
