[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
grpcio = "^1.67.1"
protobuf = "^5.28.3"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
pydantic = "^2.9.2"
python-multipart = "^0.0.16"
streamlit = "^1.39.0"
grpcio-tools = "^1.67.1"
pyjwt = "2.8.0"
bcrypt = "^4.2.0"
minio = "^7.2.12"
dvc = {version = "3.58.0", extras = ["s3"]}
clearml = "^1.16.5"
mlflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
